
add_library(${PROJECT_NAME} STATIC

    # FreeImage itself
    FreeImage/BitmapAccess.cpp
    FreeImage/ColorLookup.cpp
    FreeImage/ConversionRGBA16.cpp
    FreeImage/ConversionRGBAF.cpp
    FreeImage/FreeImage.cpp
    FreeImage/FreeImageC.c
    FreeImage/FreeImageIO.cpp
    FreeImage/GetType.cpp
    FreeImage/LFPQuantizer.cpp
    FreeImage/MemoryIO.cpp
    FreeImage/PixelAccess.cpp
    FreeImage/J2KHelper.cpp
    FreeImage/MNGHelper.cpp
    FreeImage/Plugin.cpp
    FreeImage/PluginBMP.cpp
    FreeImage/PluginCUT.cpp
    FreeImage/PluginDDS.cpp
    FreeImage/PluginEXR.cpp
    FreeImage/PluginG3.cpp
    FreeImage/PluginGIF.cpp
    FreeImage/PluginHDR.cpp
    FreeImage/PluginICO.cpp
    FreeImage/PluginIFF.cpp
    FreeImage/PluginJ2K.cpp
    FreeImage/PluginJNG.cpp
    FreeImage/PluginJP2.cpp
    FreeImage/PluginJPEG.cpp 
    FreeImage/PluginKOALA.cpp
    FreeImage/PluginMNG.cpp
    FreeImage/PluginPCD.cpp
    FreeImage/PluginPCX.cpp
    FreeImage/PluginPFM.cpp
    FreeImage/PluginPICT.cpp
    FreeImage/PluginPNG.cpp
    FreeImage/PluginPNM.cpp
    FreeImage/PluginPSD.cpp
    FreeImage/PluginRAS.cpp
    FreeImage/PluginRAW.cpp
    FreeImage/PluginSGI.cpp
    FreeImage/PluginTARGA.cpp
    FreeImage/PluginTIFF.cpp
    FreeImage/PluginWBMP.cpp
    FreeImage/PluginWebP.cpp
    FreeImage/PluginXBM.cpp
    FreeImage/PluginXPM.cpp
    FreeImage/PSDParser.cpp
    FreeImage/TIFFLogLuv.cpp
    FreeImage/Conversion.cpp
    FreeImage/Conversion16_555.cpp
    FreeImage/Conversion16_565.cpp
    FreeImage/Conversion24.cpp
    FreeImage/Conversion32.cpp
    FreeImage/Conversion4.cpp
    FreeImage/Conversion8.cpp
    FreeImage/ConversionFloat.cpp
    FreeImage/ConversionRGB16.cpp
    FreeImage/ConversionRGBF.cpp
    FreeImage/ConversionType.cpp
    FreeImage/ConversionUINT16.cpp
    FreeImage/Halftoning.cpp
    FreeImage/tmoColorConvert.cpp
    FreeImage/tmoDrago03.cpp
    FreeImage/tmoFattal02.cpp
    FreeImage/tmoReinhard05.cpp
    FreeImage/ToneMapping.cpp
    FreeImage/NNQuantizer.cpp
    FreeImage/WuQuantizer.cpp
    FreeImage/CacheFile.cpp
    FreeImage/MultiPage.cpp
    FreeImage/ZLibInterface.cpp

    # FreeImageToolkit
    FreeImageToolkit/Background.cpp
    FreeImageToolkit/BSplineRotate.cpp
    FreeImageToolkit/Channels.cpp
    FreeImageToolkit/ClassicRotate.cpp
    FreeImageToolkit/Colors.cpp
    FreeImageToolkit/CopyPaste.cpp
    FreeImageToolkit/Display.cpp
    FreeImageToolkit/Flip.cpp
    FreeImageToolkit/JPEGTransform.cpp
    FreeImageToolkit/MultigridPoissonSolver.cpp
    FreeImageToolkit/Rescale.cpp
    FreeImageToolkit/Resize.cpp

    # Bundled LibJPEG
    LibJPEG/cderror.h
    LibJPEG/cdjpeg.h
    LibJPEG/jconfig.h
    LibJPEG/jdct.h
    LibJPEG/jerror.h
    LibJPEG/jinclude.h
    LibJPEG/jpegint.h
    LibJPEG/jpeglib.h
    LibJPEG/jmemsys.h
    LibJPEG/jmorecfg.h
    LibJPEG/transupp.h
    LibJPEG/jversion.h
    LibJPEG/jaricom.c 
    LibJPEG/jcapimin.c 
    LibJPEG/jcapistd.c 
    LibJPEG/jcarith.c 
    LibJPEG/jccoefct.c 
    LibJPEG/jccolor.c 
    LibJPEG/jcdctmgr.c 
    LibJPEG/jchuff.c 
    LibJPEG/jcinit.c 
    LibJPEG/jcmainct.c 
    LibJPEG/jcmarker.c 
    LibJPEG/jcmaster.c 
    LibJPEG/jcomapi.c 
    LibJPEG/jcparam.c 
    LibJPEG/jcprepct.c 
    LibJPEG/jcsample.c 
    LibJPEG/jctrans.c 
    LibJPEG/jdapimin.c 
    LibJPEG/jdapistd.c 
    LibJPEG/jdarith.c 
    LibJPEG/jdatadst.c 
    LibJPEG/jdatasrc.c 
    LibJPEG/jdcoefct.c 
    LibJPEG/jdcolor.c 
    LibJPEG/jddctmgr.c 
    LibJPEG/jdhuff.c 
    LibJPEG/jdinput.c 
    LibJPEG/jdmainct.c 
    LibJPEG/jdmarker.c 
    LibJPEG/jdmaster.c 
    LibJPEG/jdmerge.c 
    LibJPEG/jdpostct.c 
    LibJPEG/jdsample.c 
    LibJPEG/jdtrans.c 
    LibJPEG/jerror.c 
    LibJPEG/jfdctflt.c 
    LibJPEG/jfdctfst.c 
    LibJPEG/jfdctint.c 
    LibJPEG/jidctflt.c
    LibJPEG/jidctfst.c
    LibJPEG/jidctint.c
    LibJPEG/jmemmgr.c
    LibJPEG/jmemnobs.c
    LibJPEG/jquant1.c
    LibJPEG/jquant2.c
    LibJPEG/jutils.c
    LibJPEG/transupp.c

    # Bundled LibOpenJPEG
    LibOpenJPEG/bio.c
    LibOpenJPEG/cio.c
    LibOpenJPEG/dwt.c
    LibOpenJPEG/event.c
    LibOpenJPEG/function_list.c
    LibOpenJPEG/image.c
    LibOpenJPEG/invert.c
    LibOpenJPEG/j2k.c
    LibOpenJPEG/jp2.c
    LibOpenJPEG/mct.c
    LibOpenJPEG/mqc.c
    LibOpenJPEG/openjpeg.c
    LibOpenJPEG/opj_clock.c
    LibOpenJPEG/pi.c
    LibOpenJPEG/raw.c
    LibOpenJPEG/t1.c
    LibOpenJPEG/t2.c
    LibOpenJPEG/tcd.c
    LibOpenJPEG/tgt.c
    LibOpenJPEG/bio.c
    LibOpenJPEG/cio.c
    LibOpenJPEG/dwt.c
    LibOpenJPEG/event.c
    LibOpenJPEG/function_list.c
    LibOpenJPEG/image.c
    LibOpenJPEG/invert.c
    LibOpenJPEG/j2k.c
    LibOpenJPEG/jp2.c
    LibOpenJPEG/mct.c
    LibOpenJPEG/mqc.c
    LibOpenJPEG/openjpeg.c
    LibOpenJPEG/opj_clock.c
    LibOpenJPEG/pi.c
    LibOpenJPEG/raw.c
    LibOpenJPEG/t1.c
    LibOpenJPEG/t2.c
    LibOpenJPEG/tcd.c
    LibOpenJPEG/tgt.c

    # Bundled LibTIFF4
    LibTIFF4/t4.h
    LibTIFF4/tif_config.h
    LibTIFF4/tif_config.vc.h
    LibTIFF4/tif_config.wince.h
    LibTIFF4/tif_dir.h
    LibTIFF4/tif_fax3.h
    LibTIFF4/tif_predict.h
    LibTIFF4/tiff.h
    LibTIFF4/tiffconf.h
    LibTIFF4/tiffconf.vc.h
    LibTIFF4/tiffconf.wince.h
    LibTIFF4/tiffio.h
    LibTIFF4/tiffvers.h
    LibTIFF4/uvcode.h
    LibTIFF4/tif_aux.c
    LibTIFF4/tif_close.c
    LibTIFF4/tif_codec.c
    LibTIFF4/tif_color.c
    LibTIFF4/tif_compress.c
    LibTIFF4/tif_dir.c
    LibTIFF4/tif_dirinfo.c
    LibTIFF4/tif_dirread.c
    LibTIFF4/tif_dirwrite.c
    LibTIFF4/tif_dumpmode.c
    LibTIFF4/tif_error.c
    LibTIFF4/tif_extension.c
    LibTIFF4/tif_fax3.c
    LibTIFF4/tif_fax3sm.c
    LibTIFF4/tif_flush.c
    LibTIFF4/tif_getimage.c
    LibTIFF4/tif_jpeg.c
    LibTIFF4/tif_luv.c
    LibTIFF4/tif_lzma.c
    LibTIFF4/tif_lzw.c
    LibTIFF4/tif_next.c
    LibTIFF4/tif_ojpeg.c
    LibTIFF4/tif_open.c
    LibTIFF4/tif_packbits.c
    LibTIFF4/tif_pixarlog.c
    LibTIFF4/tif_predict.c
    LibTIFF4/tif_print.c
    LibTIFF4/tif_read.c
    LibTIFF4/tif_strip.c
    LibTIFF4/tif_swab.c
    LibTIFF4/tif_thunder.c
    LibTIFF4/tif_tile.c
    LibTIFF4/tif_version.c
    LibTIFF4/tif_warning.c
    LibTIFF4/tif_write.c
    LibTIFF4/tif_zip.c

    # Bundled LibPNG
    LibPNG/png.h
    LibPNG/pngconf.h
    LibPNG/pngdebug.h
    LibPNG/pnginfo.h
    LibPNG/pnglibconf.h
    LibPNG/pngpriv.h
    LibPNG/pngstruct.h
    LibPNG/png.c
    LibPNG/pngerror.c
    LibPNG/pngget.c
    LibPNG/pngmem.c
    LibPNG/pngpread.c
    LibPNG/pngread.c
    LibPNG/pngrio.c
    LibPNG/pngrtran.c
    LibPNG/pngrutil.c
    LibPNG/pngset.c
    LibPNG/pngtrans.c
    LibPNG/pngwio.c
    LibPNG/pngwrite.c
    LibPNG/pngwtran.c
    LibPNG/pngwutil.c

    # Metadata
    Metadata/FIRational.h
    Metadata/FreeImageTag.h
    Metadata/Exif.cpp
    Metadata/FIRational.cpp
    Metadata/FreeImageTag.cpp
    Metadata/IPTC.cpp
    Metadata/TagConversion.cpp
    Metadata/TagLib.cpp
    Metadata/XTIFF.cpp

    # Bundled ZLib
    ZLib/crc32.h
    ZLib/deflate.h
    ZLib/gzguts.h
    ZLib/inffast.h
    ZLib/inffixed.h
    ZLib/inflate.h
    ZLib/inftrees.h
    ZLib/trees.h
    ZLib/zconf.h
    ZLib/zlib.h
    ZLib/zutil.h
    ZLib/adler32.c
    ZLib/compress.c
    ZLib/crc32.c
    ZLib/deflate.c
    ZLib/gzclose.c
    ZLib/gzlib.c
    ZLib/gzread.c
    ZLib/gzwrite.c
    ZLib/infback.c
    ZLib/inffast.c
    ZLib/inflate.c
    ZLib/inftrees.c
    ZLib/trees.c
    ZLib/uncompr.c
    ZLib/zutil.c

    # Utilities
    MapIntrospector.h
    CacheFile.h
    FreeImage.h
    FreeImageIO.h
    Plugin.h
    Quantizers.h
    ToneMapping.h
    Utilities.h
)
add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

# FreeImage's include directories
target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>)
target_include_directories(${PROJECT_NAME} PRIVATE 
    Metadata
    FreeImageToolkit
    LibJPEG
    LibPNG
    LibTIFF4
    ZLib
    LibOpenJPEG
    LibWebP
)

# Optional JPEG-XR support
if(BUILD_JXR)
    target_sources(${PROJECT_NAME} PRIVATE
        LibJXR/image/decode/decode.c
        LibJXR/image/decode/JXRTranscode.c
        LibJXR/image/decode/postprocess.c
        LibJXR/image/decode/segdec.c
        LibJXR/image/decode/strInvTransform.c
        FreeImage/PluginJXR.cpp
    )
    target_include_directories(${PROJECT_NAME} PRIVATE 
        LibJXR
        LibJXR/image/sys
        LibJXR/common/include
        LibJXR/jxrgluelib
    )
endif()
